added imports and basic dashboard layout

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,6 @@
-$primary: #E3BB31;
-$secondary: black;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
