updated Dashboard Layout

--- a/src/scss/scss-variables.scss
+++ b/src/scss/scss-variables.scss
@@ -1,2 +1,7 @@
 $primary: #E3BB31;
 $secondary: black;
+$success: #05C12E;
+$danger: #F95B5B;
+$warning: #E3BB31;
+$btn-primary: #5B87F9;
+$default: #DEDEDE;
