--- a/src/scss/components/dashboard.scss
+++ b/src/scss/components/dashboard.scss
@@ -18,6 +18,7 @@
   height: 100vh;
   position: sticky;
   top: 0;
+  z-index: 50;
 }
 
 .dashboard .logo {
@@ -26,6 +27,7 @@
 
 .dashboard .logo img {
   width: 15%;
+  max-width: 45px;
   margin-right: 15px;
 }
 
@@ -49,7 +51,7 @@
 /* Header */
 .dashboard header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   background-color: $primary;
   height: 60px;
@@ -83,6 +85,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.dashboard header .burger-btn {
+  border: 0;
+  background: transparent;
+}
+
+.dashboard header .burger-btn.hidden {
+  visibility: hidden;
 }
 
 /* Content */
