--- a/src/scss/components/users-page.scss
+++ b/src/scss/components/users-page.scss
@@ -1,5 +1,6 @@
 .users__title {
     line-height: 1.3;
+    padding-top: 5px;
 }
 
 .users__title-img {
@@ -12,8 +13,8 @@
 }
 
 .users__table-img {
-    width: 16px;
-    height: 16px;
+    min-width: 16px;
+    min-height: 16px;
     padding-bottom: 1px;
     border-bottom: 2px solid #000;
 }
