--- a/src/scss/components/add-user-page.scss
+++ b/src/scss/components/add-user-page.scss
@@ -1,7 +1,11 @@
+.addUser {
+    padding: 20px;
+}
+
 .addUser__item {
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 35px;
 }
 
 .addUser__label {
@@ -10,4 +14,9 @@
 
 .addUser__desc {
     position: absolute;
+    z-index: -1;
+}
+
+.invalid {
+    box-shadow: 0 0 1px 0 #F95B5B;
 }
