--- a/src/scss/components/profile-page.scss
+++ b/src/scss/components/profile-page.scss
@@ -3,15 +3,9 @@ ul {
 }
 
 .profile__item {
-    padding-top: 10px;
-}
-
-.form-label {
-    margin-bottom: 0 !important;
-}
-
-.profile__label {
-    padding-bottom: 0;
+    display: flex;
+    align-items: baseline;
+    padding-bottom: 5px;
 }
 
 .profile__text {
