--- a/src/scss/components/dashboard.scss
+++ b/src/scss/components/dashboard.scss
@@ -26,9 +26,13 @@
 }
 
 .dashboard .logo img {
-  width: 15%;
+  width: 30px;
   max-width: 45px;
   margin-right: 15px;
+}
+
+.dashboard aside .logo {
+  margin-bottom: 25px;
 }
 
 .dashboard aside nav ul {
