--- a/src/scss/components/login-page.scss
+++ b/src/scss/components/login-page.scss
@@ -1,6 +1,6 @@
 @import "../scss-variables.scss";
 
-.bg__login {
+.login__bg {
     background: url('../../assets/img/login-bg.jpg');
     background-size: cover;
 }
