--- a/src/components/layouts/DashboardLayout/dashboard.scss
+++ b/src/components/layouts/DashboardLayout/dashboard.scss
@@ -1,4 +1,4 @@
-@import "../scss-variables.scss";
+@import "../../../scss/scss-variables.scss";
 
 /* Dashboard */
 
@@ -36,7 +36,7 @@
 }
 
 .dashboard aside nav ul {
-  list-style-image: url('../../assets/img/star.svg');
+  list-style-image: url("../../../assets/img/star.svg");
   padding-left: 1.5em;
 }
 
@@ -78,7 +78,8 @@
   box-shadow: 0 0 5px black;
 }
 
-.dashboard header .profile-badge:active, .dashboard header .profile-badge:focus{
+.dashboard header .profile-badge:active,
+.dashboard header .profile-badge:focus {
   box-shadow: none;
 }
 
@@ -90,14 +91,14 @@
 }
 
 .dashboard header .dropdown-menu a {
-    display: block;
-    text-decoration: none;
-    color: black;
-  }
+  display: block;
+  text-decoration: none;
+  color: black;
+}
 
-  .dashboard header .dropdown-menu a:active {
-    color: white;
-  }
+.dashboard header .dropdown-menu a:active {
+  color: white;
+}
 
 .dashboard header .burger-btn {
   border: 0;
@@ -114,7 +115,7 @@
   padding: 15px;
 }
 
-.dashboard main .breadcrumb-item+.breadcrumb-item::before {
+.dashboard main .breadcrumb-item + .breadcrumb-item::before {
   content: var(--bs-breadcrumb-divider, "-");
 }
 
