--- a/src/components/pages/CustomersPage/customers-page.scss
+++ b/src/components/pages/CustomersPage/customers-page.scss
@@ -1,4 +1,4 @@
-@import "../scss-variables.scss";
+@import "../../../scss/scss-variables.scss";
 
 .customers__header {
   display: flex;
@@ -14,7 +14,7 @@
 }
 
 .customers__search {
-  border: 1px solid #CED4DA;
+  border: 1px solid #ced4da;
   border-radius: 4px;
   padding: 9px 15px;
 }
@@ -64,22 +64,22 @@
 }
 
 @media (max-width: 440px) {
-.customers__search {
-  margin-bottom: 10px;
-}
-.customers__options {
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
+  .customers__search {
+    margin-bottom: 10px;
+  }
+  .customers__options {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
 
-.customers table td {
-  padding: 2px;
-}
+  .customers table td {
+    padding: 2px;
+  }
 }
 
 @media (max-width: 600px) {
-.customers__header {
-  flex-direction: column;
-}
+  .customers__header {
+    flex-direction: column;
+  }
 }
