add attached images

--- a/src/scss/components/customer-page.scss
+++ b/src/scss/components/customer-page.scss
@@ -10,7 +10,7 @@
 .customer-page--factories {
   padding-top: 20px;
 }
-.img-container {
+.main-img--container {
   width: 125px;
   margin-right: 15px;
 }
