--- a/src/scss/components/factory-page.scss
+++ b/src/scss/components/factory-page.scss
@@ -24,3 +24,8 @@
 .image-upload > input {
   display: none;
 }
+.factory-page--header {
+  width: 100%;
+  padding-bottom: 20px;
+  border-bottom: 1px solid;
+}
