--- a/src/scss/components/factory-page.scss
+++ b/src/scss/components/factory-page.scss
@@ -1,15 +1,19 @@
 .img-container {
   position: relative;
-
+  margin-right: 1rem;
+  margin-bottom: 1rem;
   width: 105px;
   height: 90px;
 }
+
 .factory-img {
   width: 100%;
   height: 100%;
+  max-width: 100%;
 }
 .factory--upload-btn {
-  height: 100%;
+  width: 105px;
+  height: 90px;
 }
 .remove-img {
   width: 21px;
@@ -28,4 +32,17 @@
   width: 100%;
   padding-bottom: 20px;
   border-bottom: 1px solid;
+}
+.upload-btn-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.upload-btn-wrapper input[type="file"] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
 }
