--- a/src/components/FormComponent/AttachedImages/attached-images.scss
+++ b/src/components/FormComponent/AttachedImages/attached-images.scss
@@ -15,7 +15,7 @@
   width: 105px;
   height: 90px;
 }
-.attacched--remove-img {
+.attached--remove-img {
   width: 21px;
   height: 21px;
   border-radius: 50%;
