restucture; added PageTitle context; added api support for Customers Page

--- a/src/scss/scss-variables.scss
+++ b/src/scss/scss-variables.scss
@@ -1,7 +1,7 @@
-$primary: #E3BB31;
+$primary: #e3bb31;
 $secondary: black;
-$success: #05C12E;
-$danger: #F95B5B;
-$warning: #E3BB31;
-$btn-primary: #5B87F9;
-$default: #DEDEDE;
+$success: #05c12e;
+$danger: #f95b5b;
+$warning: #e3bb31;
+$btn-primary: #5b87f9;
+$default: #dedede;
