--- a/src/components/pages/CustomerFactoryPage/factory-page.scss
+++ b/src/components/pages/CustomerFactoryPage/factory-page.scss
@@ -1,8 +1,8 @@
 .img-container {
   position: relative;
   margin-right: 10px;
-  width: 105px;
-  height: 90px;
+  width: 120px;
+  height: 120px;
 }
 
 .factory-img {
@@ -11,7 +11,10 @@
   max-width: 100%;
 }
 
-.remove-img {
+.edit-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 21px;
   height: 21px;
   border-radius: 50%;
