--- a/src/components/pages/LoginPage/LoginPage.modele.scss
+++ b/src/components/pages/LoginPage/LoginPage.modele.scss
@@ -1,4 +1,4 @@
-@import "../scss-variables.scss";
+@import "../../../../scss/scss-variables.scss";
 
 .login__bg {
     background: url('../../assets/img/login-bg.jpg');
