--- a/src/components/widgets/DropdownImageEdit/dropdownImageEdit.scss
+++ b/src/components/widgets/DropdownImageEdit/dropdownImageEdit.scss
@@ -26,7 +26,7 @@
 }
 
 .edit-img__btn img {
-  padding: 10px;
+  padding: 4px;
   background-color: black;
   border-radius: 25px;
 }
@@ -42,4 +42,10 @@
 
 .edit-img__menu.show {
   display: flex !important;
+}
+
+@media (max-width: 400px) {
+  .edit-img__menu {
+    flex-direction: column;
+  }
 }
