--- a/src/components/layouts/DashboardLayout/dashboard.scss
+++ b/src/components/layouts/DashboardLayout/dashboard.scss
@@ -68,9 +68,9 @@
 
 .dashboard header .profile-badge {
   position: relative;
-  background: transparent;
+  background: black;
   border: 0;
-  padding: 0;
+  padding: 20px;
   border-radius: 50px;
 }
 
@@ -83,7 +83,7 @@
   box-shadow: none;
 }
 
-.dashboard header .profile-badge img {
+.dashboard header .profile-badge i {
   position: absolute;
   top: 50%;
   left: 50%;
