--- a/src/scss/components/inputs.scss
+++ b/src/scss/components/inputs.scss
@@ -1,9 +1,9 @@
-@import "../../../../scss/scss-variables.scss";
+@import "../scss-variables.scss";
 
 .form__item {
     display: flex;
     align-items: center;
-    margin-bottom: 35px;
+    margin-bottom: 10px;
 }
 
 .form__label {
