--- a/src/components/pages/Profile/Profile.scss
+++ b/src/components/pages/Profile/Profile.scss
@@ -15,6 +15,14 @@ ul {
     background: #DEDEDE;
     border-radius: 5px;
     padding-bottom: 0;
+
+    .form-control {
+        text-align: center;
+    }
+}
+
+.profile__avatar {
+    position: relative;
 }
 
 .profile__img {
@@ -28,6 +36,12 @@ ul {
     background: #eeeeee;
 }
 
+.profile__img:hover,
+.profile__img-edit:hover > .profile__img {
+    background: #000;
+    cursor: pointer;
+}
+
 .profile__edit {
     position: absolute;
     top: -5px;
@@ -35,4 +49,32 @@ ul {
     width: 16px;
     height: 16px;
     cursor: pointer;
+}
+
+.profile__img-edit {
+    position: absolute;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 86px;
+    height: 86px;
+    border-radius: 50%;
+    cursor: pointer;
+
+    & img {
+        position: absolute;
+        width: 16px;
+        height: 16px;
+        z-index: 10;
+        visibility: hidden;
+    }
+}
+
+.profile__img-edit:hover {
+    background: rgba(0, 0, 0, 0.158);
+
+    & img {
+        visibility: visible;
+    }
 }
