refactoring, fix modal window, add modal form for add and update users, fix profile, delete add page, split users on components

--- a/src/components/pages/Users/FormUser/FormUser.scss
+++ b/src/components/pages/Users/FormUser/FormUser.scss
@@ -23,3 +23,12 @@
     background-color: $default !important;
     border: none !important;
 }
+
+.formUser__buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal-footer {
+    display: block;
+}
