--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -7,10 +7,47 @@
   margin-bottom: 10px;
 }
 
+.list__header button {
+  width: 44px;
+  height: 44px;
+  background: white;
+  border: 0;
+  border-radius: 4px;
+  padding: 0;
+}
+
+.list__title {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.list__title > h3 {
+  margin-bottom: 0;
+}
+
+.list__title > button {
+  background: $btn-primary;
+  color: white;
+  width: 30px;
+  height: 30px;
+}
+
 .list__options {
   display: flex;
-  width: 400px;
   justify-content: space-between;
+  align-items: center;
+  gap: 25px;
+}
+
+.list__options .form-label {
+  margin-bottom: 0;
+}
+
+.list__select-entity {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .list__search {
@@ -21,7 +58,7 @@
 
 .list__options_btns {
   display: flex;
-  width: 125px;
+  gap: 5px;
   justify-content: space-between;
   align-items: center;
 }
@@ -31,17 +68,8 @@
   color: white;
 }
 
-.list__options_btns > button {
-  width: 44px;
-  height: 44px;
-  background: transparent;
-  border: 0;
-  border-radius: 4px;
-  padding: 0;
-}
-
-.list__options_btns > button:hover {
-  box-shadow: 0 0 5px black;
+.list__options_btns > button.active {
+  color: $btn-primary;
 }
 
 .list table .progress > .progress-bar {
@@ -63,7 +91,7 @@
   border: 1px solid black;
 }
 
-@media (max-width: 440px) {
+@media (max-width: 750px) {
   .list__search {
     margin-bottom: 10px;
   }
@@ -71,6 +99,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    gap: 5px;
   }
 
   .list table td {
@@ -78,8 +107,11 @@
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1024px) {
   .list__header {
     flex-direction: column;
+  }
+  .list__title {
+    margin-bottom: 10px;
   }
 }
