--- a/src/components/pages/Users/Users.scss
+++ b/src/components/pages/Users/Users.scss
@@ -13,8 +13,8 @@
 }
 
 .users__table-img {
-    min-width: 16px;
-    min-height: 16px;
+    width: 16px;
+    height: 16px;
     padding-bottom: 1px;
     border-bottom: 2px solid #000;
     cursor: pointer;
