--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+  padding-right: 0 !important;
 }
 
 input {
-    outline: none !important;
+  outline: none !important;
 }
