--- a/src/components/pages/Users/Users.scss
+++ b/src/components/pages/Users/Users.scss
@@ -8,14 +8,8 @@
     padding-left: 5px;
 }
 
-.users__edit-btn {
-    background-color: #C4C4C4;
-}
-
-.users__table-img {
-    width: 16px;
-    height: 16px;
-    padding-bottom: 1px;
-    border-bottom: 2px solid #000;
-    cursor: pointer;
+@media (max-width: 600px) {
+    .users__button {
+        text-align: right;
+    }
 }
