--- a/src/components/pages/Login/Login.scss
+++ b/src/components/pages/Login/Login.scss
@@ -7,7 +7,7 @@
 
 .card-img {
     max-width: 300px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .invalid {
@@ -20,10 +20,10 @@
     border-radius: 5px;
     color: #fff;
     background-color: $btn-primary;
-}
 
-@media (max-width: 500px) {
-    .login__btn {
-        width: 100%;
+    @media (max-width: 500px) {
+        & {
+            width: 100%;
+        }
     }
 }
