--- a/src/components/pages/Profile/Profile.scss
+++ b/src/components/pages/Profile/Profile.scss
@@ -1,28 +1,34 @@
-ul {
-    list-style: none;
-}
+.profile {
+    &__item {
+        display: flex;
+        align-items: center;
+        padding-bottom: 5px;
 
-.profile__item {
-    display: flex;
-    align-items: center;
-    padding-bottom: 5px;
-}
-
-.profile__text {
-    position: relative;
-    width: 100%;
-    text-align: center;
-    background: #DEDEDE;
-    border-radius: 5px;
-    padding-bottom: 0;
-
-    .form-control {
-        text-align: center;
+        .form-label {
+            margin-bottom: 0;
+        }
     }
-}
 
-.profile__avatar {
-    position: relative;
+    &__text {
+        position: relative;
+        width: 100%;
+        text-align: center;
+        background: #DEDEDE;
+        border-radius: 5px;
+        padding-bottom: 0;
+
+        .form-control {
+            text-align: center;
+        }
+    }
+
+    &__avatar {
+        position: relative;
+
+        & input[type="file"] {
+            display: none;
+        }
+    }
 }
 
 .profile__img {
@@ -34,47 +40,32 @@ ul {
     border-radius: 50%;
     color: #000;
     background: #eeeeee;
-}
 
-.profile__img:hover,
-.profile__img-edit:hover > .profile__img {
-    background: #000;
-    cursor: pointer;
-}
-
-.profile__edit {
-    position: absolute;
-    top: -5px;
-    right: -5px;
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-}
-
-.profile__img-edit {
-    position: absolute;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 86px;
-    height: 86px;
-    border-radius: 50%;
-    cursor: pointer;
-
-    & img {
-        position: absolute;
-        width: 16px;
-        height: 16px;
-        z-index: 10;
-        visibility: hidden;
+    &-edit {
+        .profile__placeholder {
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            z-index: 10;
+            visibility: hidden;
+        }
     }
-}
 
-.profile__img-edit:hover {
-    background: rgba(0, 0, 0, 0.158);
+    &:hover,
+    &-edit:hover > & {
+        background: #000;
+        cursor: pointer;
+    }
 
-    & img {
-        visibility: visible;
+    &-edit:hover {
+        position: absolute;
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 86px;
+        height: 86px;
+        border-radius: 50%;
+        cursor: pointer;
     }
 }
