--- a/src/components/pages/Profile/Profile.scss
+++ b/src/components/pages/Profile/Profile.scss
@@ -1,8 +1,11 @@
 .profile {
+    display: flex;
+    justify-content: center;
     &__item {
         display: flex;
         align-items: center;
         padding-bottom: 5px;
+        margin-bottom: 15px;
 
         .form-label {
             margin-bottom: 0;
@@ -11,7 +14,11 @@
 
     &__text {
         position: relative;
-        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 200px;
+        height: 40px;
         text-align: center;
         background: #DEDEDE;
         border-radius: 5px;
@@ -28,6 +35,12 @@
         & input[type="file"] {
             display: none;
         }
+    }
+
+    &__button {
+        display: flex;
+        justify-content: center;
+        margin-top: 10px !important;
     }
 }
 
@@ -53,7 +66,7 @@
 
     &:hover,
     &-edit:hover > & {
-        background: #000;
+        background: rgba(0, 0, 0, 0.288);
         cursor: pointer;
     }
 
