--- a/src/scss/scss-variables.scss
+++ b/src/scss/scss-variables.scss
@@ -1,7 +1,8 @@
-$primary: #e3bb31;
-$secondary: black;
+$main-primary: #e3bb31;
+$main-secondary: black;
 $success: #05c12e;
 $danger: #f95b5b;
 $warning: #e3bb31;
-$btn-primary: #5b87f9;
+$primary: #5b87f9;
+$info: #5bc9f9;
 $default: #dedede;
