--- a/src/components/pages/Users/UserModal/UserModal.scss
+++ b/src/components/pages/Users/UserModal/UserModal.scss
@@ -1,9 +1,9 @@
 @import "../../../../scss/scss-variables.scss";
 .modal__head span {
-    position: absolute;
-    right: 20px;
-    top: 20px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
 }
 .formUser__submit {
-    background-color: $btn-primary !important;
+  background-color: $primary !important;
 }
