--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -8,10 +8,8 @@
 }
 
 .list__header button {
-  width: 44px;
-  height: 44px;
   background: white;
-  border: 0;
+  border: 1px solid transparent;
   border-radius: 4px;
   padding: 0;
 }
@@ -27,7 +25,7 @@
 }
 
 .list__title > button {
-  background: $btn-primary;
+  background: $success;
   color: white;
   width: 30px;
   height: 30px;
@@ -64,12 +62,12 @@
 }
 
 .list__options_btns > .list__add-btn {
-  background-color: $btn-primary;
+  background-color: $primary;
   color: white;
 }
 
 .list__options_btns > button.active {
-  color: $btn-primary;
+  border: 1px solid black;
 }
 
 .list table .progress > .progress-bar {
@@ -105,6 +103,12 @@
   .list table td {
     padding: 2px;
   }
+}
+
+.list .table-view_btn {
+  background-color: $primary;
+  color: white;
+  border: 1px solid transparent;
 }
 
 @media (max-width: 1024px) {
