refactor equipment page

--- a/src/components/pages/Profile/Profile.scss
+++ b/src/components/pages/Profile/Profile.scss
@@ -46,6 +46,10 @@
         display: flex;
         justify-content: center;
         margin-top: 10px !important;
+
+        i {
+            margin-left: 5px;
+        }
     }
 }
 
