--- a/src/components/pages/Users/UserTable/UserTable.scss
+++ b/src/components/pages/Users/UserTable/UserTable.scss
@@ -11,6 +11,13 @@
     box-sizing: border-box;
 }
 
+.user__filter {
+  header {
+    background-color: inherit !important;
+    font-size: 20px;
+  }
+}
+
 @media (max-width: 870px) {
 
     .table-responsive .table thead {
@@ -32,5 +39,4 @@
       font-weight: bold;
       margin-right: 20px;
     }
-
   }
