--- a/src/components/pages/Users/Users.scss
+++ b/src/components/pages/Users/Users.scss
@@ -1,15 +1,17 @@
-.users__title {
+.users {
+    &__title {
     line-height: 1.3;
     padding-top: 5px;
 
-    &-img {
-        padding-bottom: 3px;
-        padding-left: 5px;
+        &-img {
+            padding-bottom: 3px;
+            padding-left: 5px;
+        }
     }
-}
 
-.users__button {
-    @media (max-width: 600px) {
-        text-align: right;
+    &__button {
+        @media (max-width: 600px) {
+            text-align: right;
+        }
     }
 }
