--- a/src/scss/dashboard-page.scss
+++ b/src/scss/dashboard-page.scss
@@ -9,14 +9,29 @@
 }
 
 .dashboard-page__block {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 2px solid black;
-  padding: 5px 30px;
+  padding: 10px 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .dashboard-page__block > span {
   font-weight: bold;
+}
+
+.dashboard-page__block .dashboard-page__block-edit {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  padding-left: 3px;
+}
+
+.dashboard-page__block .dashboard-page__block-view {
+  padding: 5px 20px;
 }
