--- a/src/scss/location-edit.scss
+++ b/src/scss/location-edit.scss
@@ -1,8 +1,7 @@
-.delete-field--btn {
-}
 .delete-field {
   display: flex !important;
   flex-direction: row !important;
+  max-height: 38px;
 }
 .delete-field--container {
   border-radius: 5px;
