--- a/src/components/AttachedFiles/Previews.scss
+++ b/src/components/AttachedFiles/Previews.scss
@@ -32,8 +32,8 @@
   border: 1px solid #eaeaea;
   margin-bottom: 1rem;
   margin-right: 1rem;
-  width: 120px;
-  height: 120px;
+  width: 105px;
+  height: 90px;
 }
 
 .thumbInner {
@@ -52,4 +52,15 @@
   .thumbsContainer {
     justify-content: center;
   }
+}
+.dropzone {
+  padding: 10px;
+  background: white;
+  border-radius: 5px;
+  border: 2px dashed rgb(0, 135, 247);
+  border-image: none;
+  min-width: 500px;
+  min-height: 150px;
+  margin-left: auto;
+  margin-right: auto;
 }
