--- a/src/scss/CRMEntity.scss
+++ b/src/scss/CRMEntity.scss
@@ -29,6 +29,7 @@
   letter-spacing: 0em;
 }
 .page-subtitle {
+  text-transform: uppercase;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
@@ -52,4 +53,13 @@
 
 .page-subtitle {
   margin-bottom: 20px;
+}
+.attached-files--list {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1500px;
+  justify-content: space-between;
+}
+.attached-files--item:not(:last-child) {
+  margin-right: 20px;
 }
