--- a/src/components/InformationComponent/information-component.scss
+++ b/src/components/InformationComponent/information-component.scss
@@ -7,9 +7,7 @@
   width: fit-content;
 
   padding: 5px 15px;
-  background: #dedede;
-  border: 1px solid #ced4da;
-  box-sizing: border-box;
+  border: 1px solid grey;
   border-radius: 4px;
 }
 .information--list {
