[Comertial Purpose]: add styles and add table

--- a/src/components/pages/Users/UserModal/UserModal.scss
+++ b/src/components/pages/Users/UserModal/UserModal.scss
@@ -55,3 +55,18 @@
           }
     }
 }
+
+.formUser {
+
+  &__buttons {
+    width: 100%;
+  }
+  
+  &__cancel {
+
+  }
+
+  &__submit {
+    
+  }
+}
