--- a/src/scss/CRMEntity.scss
+++ b/src/scss/CRMEntity.scss
@@ -45,18 +45,18 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  margin-right: -15px;
+  margin-bottom: -20px;
 }
 .attached-files--item {
+  margin-right: 20px;
   margin-bottom: 20px;
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1024px) {
+  .attached-files--item {
+    max-width: 390px;
+  }
   .attached-files--list {
     flex-direction: row;
-  }
-  .attached-files--item:not(:last-child) {
-    margin-right: 20px;
-  }
-  .attached-files--item {
-    margin-bottom: 0px;
   }
 }
