--- a/src/scss/attachedFiles.scss
+++ b/src/scss/attachedFiles.scss
@@ -22,8 +22,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-
-  margin: top 16px;
+  margin-bottom: -15px;
 }
 
 .thumb {
@@ -31,12 +30,13 @@
   display: inline-flex;
   border-radius: 2px;
   border: 1px solid #eaeaea;
-  margin-bottom: 1rem;
-  margin-right: 1rem;
+  margin-bottom: 15px;
   width: 105px;
   height: 90px;
 }
-
+.thumb:not(:last-child) {
+  margin-right: 15px;
+}
 .thumbInner {
   display: flex;
   justify-content: center;
@@ -57,8 +57,8 @@
   border: 2px dashed rgb(0, 135, 247);
   border-image: none;
   min-width: 300px;
-  max-width: 390px;
-  min-height: 150px;
+  max-width: 100%;
+  min-height: 100px;
 }
 .attached--img {
   display: block;
