--- a/src/scss/location-edit.scss
+++ b/src/scss/location-edit.scss
@@ -6,7 +6,7 @@
 .btn.delete-field--container {
   border-radius: 5px;
   border: 1px solid #ced4da;
-
+  margin-left: 5px;
   position: relative;
   padding: 0px;
   width: 38px;
