--- a/src/scss/attachedFiles.scss
+++ b/src/scss/attachedFiles.scss
@@ -23,6 +23,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   margin-bottom: -15px;
+  margin-right: -15px;
 }
 
 .thumb {
@@ -31,12 +32,11 @@
   border-radius: 2px;
   border: 1px solid #eaeaea;
   margin-bottom: 15px;
-  width: 105px;
+  margin-right: 15px;
+  width: 100px;
   height: 90px;
 }
-.thumb:not(:last-child) {
-  margin-right: 15px;
-}
+
 .thumbInner {
   display: flex;
   justify-content: center;
@@ -57,7 +57,7 @@
   border: 2px dashed rgb(0, 135, 247);
   border-image: none;
   min-width: 300px;
-  max-width: 100%;
+  width: 100%;
   min-height: 100px;
 }
 .attached--img {
@@ -65,7 +65,7 @@
   width: 100%;
   height: 100%;
 }
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 330px) {
   .dropzone {
     min-width: 250px;
   }
