--- a/src/scss/dropdownImageEdit.scss
+++ b/src/scss/dropdownImageEdit.scss
@@ -30,10 +30,16 @@
   background-color: black;
   border-radius: 25px;
 }
+.edit-img .edit-img__menu {
+  min-width: unset;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column;
+}
 
 .edit-img__menu img {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
 }
 
 .edit-img__menu p {
