Added create modals for Network entities; Changed Table view to Network requirements; Fixed view issues

--- a/src/scss/network.scss
+++ b/src/scss/network.scss
@@ -4,7 +4,11 @@
 
 .accordion__headers {
   display: flex;
-  justify-content: space-between;
+  gap: 15px;
+}
+
+.accordion__headers .accordion-header {
+  width: 100%;
 }
 
 .card-body {
