--- a/src/scss/dashboard-page.scss
+++ b/src/scss/dashboard-page.scss
@@ -5,7 +5,6 @@
 .dashboard-page__block-wrapper {
   display: flex;
   gap: 15px;
-  flex-wrap: wrap;
 }
 
 .dashboard-page__block {
@@ -16,6 +15,7 @@
   border: 2px solid black;
   padding: 10px 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  width: 100%;
 }
 
 .dashboard-page__block > span {
