--- a/src/components/pages/ComertialPurpose/ComertialPurpose.scss
+++ b/src/components/pages/ComertialPurpose/ComertialPurpose.scss
@@ -20,10 +20,11 @@
     &__quote {
         display: flex;
         align-items: center;
-        justify-content: space-between;
 
         input {
             max-width: 100px;
+            font-size: 20px;
+            font-weight: 700;
         }
     }
 
@@ -50,21 +51,29 @@
 
         input {
             max-width: 180px;
+            text-align: right;
         }
     }
 
     &__table {
         margin-bottom: 20px;
 
-        input {
-            max-width: 100px;
-        }
     }
 
     &__buttons {
         display: flex;
         justify-content: end;
         margin-left: auto;
+    }
+
+    &__total {
+        display: none;
+        justify-content: end;
+        margin-left: auto;
+
+        @media print {
+            display: flex;
+        }
     }
 }
 
@@ -83,6 +92,12 @@
         text-shadow: none !important;
     }
 
+    input,
+    textarea {
+        padding: 0 !important;
+        margin: 0 !important;
+    }
+
     header,
     .breadcrumbs {
         display: none;
@@ -96,7 +111,38 @@
         visibility: hidden;
     }
 
+    .purpose {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .purpose__title-print {
+        display: flex !important;
+
+    }
+
+    .purpose__title {
+        width: 45% !important;
+
+        h3 {
+            display: none;
+        }
+    }
+
+    .purpose__adress {
+        width: 45% !important;
+    }
+
+    .purpose__quote {
+        min-width: 30% !important; 
+    }
+
     .purpose__buttons {
         display: none;
+    }
+
+    .purpose__tables {
+        width: 600px;
     }
 }
