--- a/src/scss/attachedFiles.scss
+++ b/src/scss/attachedFiles.scss
@@ -56,7 +56,7 @@
   border-radius: 5px;
   border: 2px dashed rgb(0, 135, 247);
   border-image: none;
-  min-width: 300px;
+  // min-width: 150px;
   width: 100%;
   min-height: 100px;
 }
