--- a/src/components/pages/ComertialPurpose/pdf.html
+++ b/src/components/pages/ComertialPurpose/pdf.html
@@ -52,7 +52,7 @@
                     <div class="purpose_info-title">
                         Date
                     </div>
-                    <div id="date">
+                    <div class="purpose_info-desc" id="date">
                         Date
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                     <div class="purpose_info-title">
                         Expires
                     </div>
-                    <div id="expires">
+                    <div class="purpose_info-desc" id="expires">
                         Expires
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                     <div class="purpose_info-title">
                         Memo
                     </div>
-                    <div id="memo">
+                    <div class="purpose_info-desc" id="memo">
                         Memo
                     </div>
                 </div>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="purpose_subadress">
-            20 W. 11th St.<br/> 
+            20 W. 11th St.<br/>
             Suite 200<br/>
             Covington, KY 41011<br/>
             United States<br/>
