--- a/src/scss/attachedFiles.scss
+++ b/src/scss/attachedFiles.scss
@@ -99,3 +99,20 @@
 .add-file-btn--icon {
   color: black;
 }
+
+.dropzone--filename {
+  position: relative;
+}
+.filename--text {
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  background-color: rgba(255, 255, 255, 0.4);
+  line-height: 150%;
+  border-radius: 3px;
+}
+.dropzone--filename:not(:hover) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
