--- a/src/components/pages/Profile/Profile.scss
+++ b/src/components/pages/Profile/Profile.scss
@@ -8,7 +8,7 @@
 
 .profile {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 20px;
     &__card {
         padding: 10px;
@@ -44,9 +44,6 @@
     }
 
     &__avatar {
-        display: flex;
-        align-items: center;
-        justify-content: center;
         max-width: 150px;
         margin-bottom: 30px;
         & input[type="file"] {
@@ -79,13 +76,14 @@
 }
 
 .profile__img {
-    width: 98px;
-    height: 98px;
+    width: 120px;
+    height: 120px;
     min-width: 98px;
     min-height: 98px;
-    border-radius: 50%;
+    border-radius: 5px;
     color: #000;
     background: #eeeeee;
+    object-fit: cover;
 
     &-edit {
         .profile__placeholder {
